[package]
name = "xremap-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3"
log = "0.4.29"
tokio = { version = "1.48.0", features = ["full"] }
users = "0.11.0"
zbus = { version = "5.12.0", features = ["tokio"] }
